tests/snapshots/snapshots__pipeline@grade_fun_multishot.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/grade_fun_multishot.pr
---
== tokens ==
VOpen Effect UIdent("Poll") VOpen Ident("once") Ident("poll") LParen RParen Colon KwInt VClose VSemi Fn Ident("use_it") LParen RParen Colon KwInt Bang LBrace UIdent("Poll") RBrace Eq Ident("poll") LParen RParen VSemi Fn Ident("main") LParen RParen Eq VOpen Handle Ident("use_it") LParen RParen With VOpen Ident("poll") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 1, suffix: None }) RParen Plus Ident("k") LParen Int(IntLit { value: 2, suffix: None }) RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Poll",
            params: [],
            ops: [
                EffOp {
                    name: "poll",
                    params: [],
                    ret: Int,
                    grade: Once,
                    span: 163..167,
                },
            ],
            span: 144..175,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "use_it",
            params: [],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Poll",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "poll",
                        ),
                        span: 206..210,
                    },
                    [],
                ),
                span: 206..212,
            },
            wheres: [],
            span: 177..212,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Handle(
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "use_it",
                                ),
                                span: 235..241,
                            },
                            [],
                        ),
                        span: 235..243,
                    },
                    [
                        Op(
                            "poll",
                            [],
                            "k",
                            Spanned {
                                node: Bin(
                                    Add,
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "k",
                                                ),
                                                span: 272..273,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 274..275,
                                                },
                                            ],
                                        ),
                                        span: 272..276,
                                    },
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "k",
                                                ),
                                                span: 279..280,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 2,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 281..282,
                                                },
                                            ],
                                        ),
                                        span: 279..283,
                                    },
                                ),
                                span: 272..283,
                            },
                        ),
                        Return(
                            "r",
                            Spanned {
                                node: Var(
                                    "r",
                                ),
                                span: 300..301,
                            },
                        ),
                    ],
                    Exhaustive,
                ),
                span: 228..301,
            },
            wheres: [],
            span: 214..301,
        },
    ],
}

== types ==
[E6028] Type Error: handler clause for `poll` exceeds its declared grade `once` (which resumes exactly once, in tail position): this clause may resume the continuation more than once
    ╭─[ <source>:10:24 ]
    │
 10 │     poll() resume k => k(1) + k(2)
    │                        ─────┬─────  
    │                             ╰─────── handler clause for `poll` exceeds its declared grade `once` (which resumes exactly once, in tail position): this clause may resume the continuation more than once
────╯
