tests/snapshots/snapshots__pipeline@guard_true_exhaustive.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/guard_true_exhaustive.pr
---
== tokens ==
VOpen Fn Ident("classify") LParen Ident("n") Colon KwInt RParen Colon KwInt Eq VOpen Match Ident("n") Of VOpen Int(IntLit { value: 0, suffix: None }) FatArrow Int(IntLit { value: 0, suffix: None }) VSemi Ident("x") If True FatArrow Int(IntLit { value: 1, suffix: None }) VClose VClose VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("classify") LParen Int(IntLit { value: 5, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "classify",
            params: [
                Param {
                    name: "n",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "n",
                        ),
                        span: 186..187,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 0,
                                        suffix: None,
                                    },
                                ),
                                span: 195..196,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 0,
                                        suffix: None,
                                    },
                                ),
                                span: 200..201,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Var(
                                    "x",
                                ),
                                span: 206..207,
                            },
                            guard: Spanned {
                                node: Bool(
                                    true,
                                ),
                                span: 211..215,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 1,
                                        suffix: None,
                                    },
                                ),
                                span: 219..220,
                            },
                        },
                    ],
                ),
                span: 180..220,
            },
            wheres: [],
            span: 149..220,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "classify",
                        ),
                        span: 240..248,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 5,
                                    suffix: None,
                                },
                            ),
                            span: 249..250,
                        },
                    ],
                ),
                span: 240..251,
            },
            wheres: [],
            span: 222..251,
        },
    ],
}

== types ==
classify : (Int) -> Int
main : () -> Int

== core (cbpv) ==
fn classify(n) =
  return n to t@0
  t@0 == 0 to t@3
  if t@3 then
    return 0
  else
    return t@0 to t@1
    return t@1 to x
    return true to t@2
    if t@2 then
      return t@1 to x
      return 1
    else
      case t@0 of
        _ =>
          error "ICE: guarded match fell through"
fn main() =
  return 5 to t@4
  classify(t@4)

== fbip (rc) ==
fn classify(n) =
  return n to t@0
  dup t@0
  t@0 == 0 to t@3
  if t@3 then
    drop t@3
    return 0
  else
    drop t@3
    return t@0 to t@1
    return t@1 to x
    return true to t@2
    if t@2 then
      drop t@2
      return t@1 to x
      return 1
    else
      case t@0 of
        _ =>
          drop t@2
          error "ICE: guarded match fell through"
fn main() =
  return 5 to t@4
  classify(t@4) to %rc0
  drop t@4
  return %rc0

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [806 x i8] c"scheme  prism-core-hash-v2\0Abundle  f28620b4a76b98610d263343b0ee903189d118dd81c46f3b4b1b454c0e3074f4\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:f28620b4a76b98610d263343b0ee903189d118dd81c46f3b4b1b454c0e3074f4\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_classify  967607b890fe4449f555e2636452dac9e152286cf90b5c26d7a80b49294fe1d6  classify\0Afn      prismfn_main  6b9181ac407a2cfd6dd9baba542864657fa1cbd85668ec12c9291d2b547b9540  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [910 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  f28620b4a76b98610d263343b0ee903189d118dd81c46f3b4b1b454c0e3074f4\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:f28620b4a76b98610d263343b0ee903189d118dd81c46f3b4b1b454c0e3074f4\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_classify 967607b890fe4449f555e2636452dac9e152286cf90b5c26d7a80b49294fe1d6 classify arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main 6b9181ac407a2cfd6dd9baba542864657fa1cbd85668ec12c9291d2b547b9540 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"6b9181ac407a2cfd6dd9baba542864657fa1cbd85668ec12c9291d2b547b9540\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  ret i64 3
}

attributes #0 = { nounwind }

== run ==
output: []
result: 1
