tests/snapshots/snapshots__pipeline@handler_dup_arm.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/handler_dup_arm.pr
---
== tokens ==
VOpen Effect UIdent("Pick") VOpen Ident("pick") LParen RParen Colon KwInt VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Ident("println") LParen Handle Ident("pick") LParen RParen With LBrace Ident("pick") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 11, suffix: None }) RParen Comma Ident("pick") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 22, suffix: None }) RParen Comma Return Ident("r") FatArrow Ident("r") RBrace RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Pick",
            params: [],
            ops: [
                EffOp {
                    name: "pick",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 296..300,
                },
            ],
            span: 282..308,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 324..331,
                    },
                    [
                        Spanned {
                            node: Handle(
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "pick",
                                            ),
                                            span: 339..343,
                                        },
                                        [],
                                    ),
                                    span: 339..345,
                                },
                                [
                                    Op(
                                        "pick",
                                        [],
                                        "k",
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "k",
                                                    ),
                                                    span: 376..377,
                                                },
                                                [
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 11,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 378..380,
                                                    },
                                                ],
                                            ),
                                            span: 376..381,
                                        },
                                    ),
                                    Op(
                                        "pick",
                                        [],
                                        "k",
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "k",
                                                    ),
                                                    span: 406..407,
                                                },
                                                [
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 22,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 408..410,
                                                    },
                                                ],
                                            ),
                                            span: 406..411,
                                        },
                                    ),
                                    Return(
                                        "r",
                                        Spanned {
                                            node: Var(
                                                "r",
                                            ),
                                            span: 429..430,
                                        },
                                    ),
                                ],
                                Exhaustive,
                            ),
                            span: 332..434,
                        },
                    ],
                ),
                span: 324..435,
            },
            wheres: [],
            span: 310..435,
        },
    ],
}

== types ==
[E5008] Type Error: in `main`: duplicate handler clause for operation `pick`; a handler binds each operation exactly once
    ╭─[ <source>:11:24 ]
    │
 11 │     pick() resume k => k(22),
    │                        ──┬──  
    │                          ╰──── in `main`: duplicate handler clause for operation `pick`; a handler binds each operation exactly once
    │
    ├─[ <source>:11:24 ]
    │
 10 │     pick() resume k => k(11),
    │                        ──┬──  
    │                          ╰──── first clause for `pick` here
────╯
