tests/snapshots/snapshots__pipeline@handler_dup_return.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/handler_dup_return.pr
---
== tokens ==
VOpen Effect UIdent("Pick") VOpen Ident("pick") LParen RParen Colon KwInt VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Ident("println") LParen Handle Ident("pick") LParen RParen With LBrace Ident("pick") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 1, suffix: None }) RParen Comma Return Ident("r") FatArrow Ident("r") Comma Return Ident("r") FatArrow Ident("r") Plus Int(IntLit { value: 1, suffix: None }) RBrace RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Pick",
            params: [],
            ops: [
                EffOp {
                    name: "pick",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 164..168,
                },
            ],
            span: 150..176,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 192..199,
                    },
                    [
                        Spanned {
                            node: Handle(
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "pick",
                                            ),
                                            span: 207..211,
                                        },
                                        [],
                                    ),
                                    span: 207..213,
                                },
                                [
                                    Op(
                                        "pick",
                                        [],
                                        "k",
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "k",
                                                    ),
                                                    span: 244..245,
                                                },
                                                [
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 1,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 246..247,
                                                    },
                                                ],
                                            ),
                                            span: 244..248,
                                        },
                                    ),
                                    Return(
                                        "r",
                                        Spanned {
                                            node: Var(
                                                "r",
                                            ),
                                            span: 266..267,
                                        },
                                    ),
                                    Return(
                                        "r",
                                        Spanned {
                                            node: Bin(
                                                Add,
                                                Spanned {
                                                    node: Var(
                                                        "r",
                                                    ),
                                                    span: 285..286,
                                                },
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 289..290,
                                                },
                                            ),
                                            span: 285..290,
                                        },
                                    ),
                                ],
                                Exhaustive,
                            ),
                            span: 200..294,
                        },
                    ],
                ),
                span: 192..295,
            },
            wheres: [],
            span: 178..295,
        },
    ],
}

== types ==
[E5009] Type Error: in `main`: duplicate `return` clause; a handler has at most one
    ╭─[ <source>:10:17 ]
    │
 10 │     return r => r + 1
    │                 ──┬──  
    │                   ╰──── in `main`: duplicate `return` clause; a handler has at most one
    │
    ├─[ <source>:10:17 ]
    │
  9 │     return r => r,
    │                 ┬  
    │                 ╰── first `return` clause here
────╯
